--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
 							<div class="row">
 								<div class="col-sm-3 features-box wow fadeInUp website">
-									<a href="https://luov.tk"><div class="features-box-icon">
+									<a href="https://luov.top"><div class="features-box-icon">
 										<!-- <span aria-hidden="true" class="icon_profile"></span> -->
 										<img src="assets\img\mrluo.png" width="80px">
 									</div>
@@ -142,7 +142,7 @@
 		</div>
 
 	</div>
-	<!--<div class="copyrights">&copy;<a href="http://luov.tk" title="Mr.Luo">LuoV</a></div>-->
+	<!--<div class="copyrights">&copy;<a href="http://luov.top" title="Mr.Luo">LuoV</a></div>-->
 
 	<!-- More info -->
 	<!-- <div class="features-container section-container">
@@ -191,7 +191,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 footer-copyright">
-					&copy;2018 <a href="http://luov.tk" title="Mr.Luo">LuoV</a>, All rights reserved。
+					&copy;2018 <a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved。
 				</div>
 			</div>
 		</div>
