--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+	<script>
+		var _hmt = _hmt || [];
+		(function () {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?3c99df2096211f5814fd2cfb5d4cb726";
+			var s = document.getElementsByTagName("script")[0];
+			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
 
 </head>
 
@@ -63,14 +72,14 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Eternal charm,  Endless sound.</a>
+					<a class="navbar-brand" href="index.html">Eternal charm, Endless sound.</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
 							<span class="li-text">
-								Eternal charm,  Endless sound.
+								Eternal charm, Endless sound.
 							</span>
 							<!--<a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=USM_IyY0KBE3Pik8MDg9fzI_PA"><strong>Mail Me</strong></a>-->
 							<!--<span class="li-social">
@@ -100,13 +109,13 @@
 						</div>
 						<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
 							<div class="years-wrapper">
-								<span class="years" ></span> <span class="t-text">years /</span>
+								<span class="years"></span> <span class="t-text">years /</span>
 							</div>
 							<!--<div class="mouths-wrapper">
 								<span class="mouths" ></span> <span class="t-text">months /</span>
 							</div>-->
 							<div class="days-wrapper">
-								<span class="days" ></span> <span class="t-text">days /</span>
+								<span class="days"></span> <span class="t-text">days /</span>
 							</div>
 							<div class="hours-wrapper">
 								<span class="hours"></span> <span class="t-text">hours /</span>
@@ -121,18 +130,22 @@
 						<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
 							<div class="row">
 								<div class="col-sm-3 features-box wow fadeInUp website">
-									<a href="https://luov.top"><div class="features-box-icon">
-										<!-- <span aria-hidden="true" class="icon_profile"></span> -->
-										<img src="assets\img\mrluo.png" width="80px">
-									</div>
-									<h3>Mr.Luo</h3></a>
+									<a href="https://luov.top">
+										<div class="features-box-icon">
+											<!-- <span aria-hidden="true" class="icon_profile"></span> -->
+											<img src="assets\img\mrluo.png" width="80px">
+										</div>
+										<h3>Mr.Luo</h3>
+									</a>
 								</div>
 								<div class="col-sm-3 features-box wow fadeInDown website">
-									<a href="https://xian6ge.cn"><div class="features-box-icon">
-										<!-- <span aria-hidden="true" class="icon_pencil"></span> -->
-										<img src="assets\img\xian6ge.png" width="78px">										
-									</div>
-									<h3>贤柳阁</h3></a>
+									<a href="https://xian6ge.cn">
+										<div class="features-box-icon">
+											<!-- <span aria-hidden="true" class="icon_pencil"></span> -->
+											<img src="assets\img\xian6ge.png" width="78px">
+										</div>
+										<h3>贤柳阁</h3>
+									</a>
 								</div>
 							</div>
 						</div>
