增加CNZZ统计代码

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+
+	<!-- CNZZ统计代码 -->
+	<script src="https://s19.cnzz.com/z_stat.php?id=1274914062&web_id=1274914062" language="JavaScript"></script>
+	<!-- 百度统计代码 -->
 	<script>
 		var _hmt = _hmt || [];
 		(function () {
