更新统计代码

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
 
 	<!-- CNZZ统计代码 -->
-	<script src="https://s19.cnzz.com/z_stat.php?id=1274914062&web_id=1274914062" language="JavaScript"></script>
+	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1274914062'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274914062' type='text/javascript'%3E%3C/script%3E"));</script>
 	<!-- 百度统计代码 -->
 	<script>
 		var _hmt = _hmt || [];
