--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+	<head>
 
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Site not here - 贤柳阁 | LuoV</title>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Site not here - 贤柳阁 | LuoV</title>
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
-	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-	<link rel="stylesheet" href="assets/css/animate.css">
-	<link rel="stylesheet" href="assets/css/form-elements.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-	<link rel="stylesheet" href="assets/css/media-queries.css">
+		<!-- CSS -->
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
+		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+		<link rel="stylesheet" href="assets/css/animate.css">
+		<link rel="stylesheet" href="assets/css/form-elements.css">
+		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" href="assets/css/media-queries.css">
 
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
+		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+		<!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-	<!--[if gte IE 9]>
+		<!--[if gte IE 9]>
         	<style type="text/css">
         		.gradient {
         			filter: none;
@@ -32,137 +32,140 @@
         	</style>
         <![endif]-->
 
-	<!-- Favicon and touch icons -->
-	<link rel="shortcut icon" href="assets/ico/favicon.png">
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+		<!-- Favicon and touch icons -->
+		<link rel="shortcut icon" href="assets/ico/favicon.png">
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
 
-	<!-- CNZZ统计代码 -->
-	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1274914062'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274914062' type='text/javascript'%3E%3C/script%3E"));</script>
-	<!-- 百度统计代码 -->
-	<script>
-		var _hmt = _hmt || [];
-		(function () {
-			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?3c99df2096211f5814fd2cfb5d4cb726";
-			var s = document.getElementsByTagName("script")[0];
-			s.parentNode.insertBefore(hm, s);
-		})();
-	</script>
+		<!-- CNZZ统计代码 -->
+		<script type="text/javascript">
+			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+			document.write(unescape("%3Cspan id='cnzz_stat_icon_1274914062'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274914062' type='text/javascript'%3E%3C/script%3E"));
+		</script>
+		<!-- 百度统计代码 -->
+		<script>
+			var _hmt = _hmt || [];
+			(function() {
+				var hm = document.createElement("script");
+				hm.src = "https://hm.baidu.com/hm.js?3c99df2096211f5814fd2cfb5d4cb726";
+				var s = document.getElementsByTagName("script")[0];
+				s.parentNode.insertBefore(hm, s);
+			})();
+		</script>
+		<script type="text/javascript" src="assets/js/js.js"></script>
+		<script type="text/javascript" src="assets/js/jump.js"></script>
+	</head>
 
-</head>
+	<body>
 
-<body>
+		<!-- Loader -->
+		<div class="loader">
+			<div class="loader-img"></div>
+		</div>
 
-	<!-- Loader -->
-	<div class="loader">
-		<div class="loader-img"></div>
-	</div>
+		<!-- Top content -->
+		<div class="top-content">
 
-	<!-- Top content -->
-	<div class="top-content">
+			<div class="top-content-gradient gradient"></div>
 
-		<div class="top-content-gradient gradient"></div>
-
-		<!-- Top menu -->
-		<nav class="navbar navbar-inverse navbar-no-bg" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
+			<!-- Top menu -->
+			<nav class="navbar navbar-inverse navbar-no-bg" role="navigation">
+				<div class="container">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
 						<span class="sr-only">Site move to new address</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Eternal charm, Endless sound.</a>
-				</div>
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="top-navbar-1">
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<span class="li-text">
+						<a class="navbar-brand" href="index.html">Eternal charm, Endless sound.</a>
+					</div>
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse" id="top-navbar-1">
+						<ul class="nav navbar-nav navbar-right">
+							<li>
+								<span class="li-text">
 								Eternal charm, Endless sound.
 							</span>
-							<!--<a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=USM_IyY0KBE3Pik8MDg9fzI_PA"><strong>Mail Me</strong></a>-->
-							<!--<span class="li-social">
+								<!--<a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=USM_IyY0KBE3Pik8MDg9fzI_PA"><strong>Mail Me</strong></a>-->
+								<!--<span class="li-social">
 								<a href="#"><span class="social_facebook"></span></a>
 								<a href="https://github.com/Rorwey"><span class=""></span></a>
 								<a href="https://github.com/Rorwey"><span class="fa-github"></span></a>
 								<a href="#"><span class="social_skype"></span></a>
 							</span>-->
-						</li>
-					</ul>
+							</li>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</nav>
+			</nav>
 
-		<div class="inner-bg">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-8 text">
-						<h1 class="wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="1s">
+			<div class="inner-bg">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-8 text">
+							<h1 class="wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="1s">
 							We moved to the <strong>New Address</strong>
 						</h1>
-						<div class="description wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="2s">
-							<p>
-								贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。<br>
-								Xianliuge and Mr.Luo are working on the new domain name. Click the icon below to access the new address.
-							</p>
-						</div>
-						<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
-							<div class="years-wrapper">
-								<span class="years"></span> <span class="t-text">years /</span>
+							<div class="description wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="2s">
+								<p>
+									贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。<br> Xianliuge and Mr.Luo are working on the new domain name. Click the icon below to access the new address.
+								</p>
 							</div>
-							<!--<div class="mouths-wrapper">
+							<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
+								<div class="years-wrapper">
+									<span class="years"></span> <span class="t-text">years /</span>
+								</div>
+								<!--<div class="mouths-wrapper">
 								<span class="mouths" ></span> <span class="t-text">months /</span>
 							</div>-->
-							<div class="days-wrapper">
-								<span class="days"></span> <span class="t-text">days /</span>
-							</div>
-							<div class="hours-wrapper">
-								<span class="hours"></span> <span class="t-text">hours /</span>
-							</div>
-							<div class="minutes-wrapper">
-								<span class="minutes"></span> <span class="t-text">minutes /</span>
-							</div>
-							<div class="seconds-wrapper">
-								<span class="seconds"></span> <span class="t-text">seconds</span>
-							</div>
-						</div>
-						<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
-							<div class="row">
-								<div class="col-sm-3 features-box wow fadeInUp website">
-									<a href="https://luov.top">
-										<div class="features-box-icon">
-											<!-- <span aria-hidden="true" class="icon_profile"></span> -->
-											<img src="assets\img\mrluo.png" width="80px">
-										</div>
-										<h3>Mr.Luo</h3>
-									</a>
+								<div class="days-wrapper">
+									<span class="days"></span> <span class="t-text">days /</span>
 								</div>
-								<div class="col-sm-3 features-box wow fadeInDown website">
-									<a href="https://xian6ge.cn">
-										<div class="features-box-icon">
-											<!-- <span aria-hidden="true" class="icon_pencil"></span> -->
-											<img src="assets\img\xian6ge.png" width="78px">
-										</div>
-										<h3>贤柳阁</h3>
-									</a>
+								<div class="hours-wrapper">
+									<span class="hours"></span> <span class="t-text">hours /</span>
+								</div>
+								<div class="minutes-wrapper">
+									<span class="minutes"></span> <span class="t-text">minutes /</span>
+								</div>
+								<div class="seconds-wrapper">
+									<span class="seconds"></span> <span class="t-text">seconds</span>
+								</div>
+							</div>
+							<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
+								<div class="row">
+									<div class="col-sm-3 features-box wow fadeInUp website">
+										<a href="https://luov.top">
+											<div class="features-box-icon">
+												<!-- <span aria-hidden="true" class="icon_profile"></span> -->
+												<img src="assets\img\mrluo.png" width="80px">
+											</div>
+											<h3>Mr.Luo</h3>
+										</a>
+									</div>
+									<div class="col-sm-3 features-box wow fadeInDown website">
+										<a href="https://xian6ge.cn">
+											<div class="features-box-icon">
+												<!-- <span aria-hidden="true" class="icon_pencil"></span> -->
+												<img src="assets\img\xian6ge.png" width="78px">
+											</div>
+											<h3>贤柳阁</h3>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+
 		</div>
+		<!--<div class="copyrights">&copy;<a href="http://luov.top" title="Mr.Luo">LuoV</a></div>-->
 
-	</div>
-	<!--<div class="copyrights">&copy;<a href="http://luov.top" title="Mr.Luo">LuoV</a></div>-->
-
-	<!-- More info -->
-	<!-- <div class="features-container section-container">
+		<!-- More info -->
+		<!-- <div class="features-container section-container">
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 features section-description wow fadeIn">
@@ -203,32 +206,32 @@
 	        </div>
         </div> -->
 
-	<!-- Footer -->
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 footer-copyright">
-					&copy;2018 <a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved。
+		<!-- Footer -->
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 footer-copyright">
+						&copy;2018
+						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved。
+					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
 
+		<!-- Javascript -->
+		<script src="assets/js/jquery-1.11.1.min.js"></script>
+		<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+		<script src="assets/js/jquery.backstretch.min.js"></script>
+		<!--<script src="assets/js/jquery.countdown.min.js"></script>-->
+		<script src="assets/js/js.js"></script>
+		<script src="assets/js/wow.min.js"></script>
+		<script src="assets/js/retina-1.1.0.min.js"></script>
+		<script src="assets/js/scripts.js"></script>
 
-	<!-- Javascript -->
-	<script src="assets/js/jquery-1.11.1.min.js"></script>
-	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-	<script src="assets/js/jquery.backstretch.min.js"></script>
-	<!--<script src="assets/js/jquery.countdown.min.js"></script>-->
-	<script src="assets/js/js.js"></script>
-	<script src="assets/js/wow.min.js"></script>
-	<script src="assets/js/retina-1.1.0.min.js"></script>
-	<script src="assets/js/scripts.js"></script>
-
-	<!--[if lt IE 10]>
+		<!--[if lt IE 10]>
             <script src="assets/js/placeholder.js"></script>
         <![endif]-->
 
-</body>
+	</body>
 
 </html>
