site not here更新为时光

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Site not here 时光 - 贤柳阁 | LuoV</title>
+		<title>时光 Site not here -贤柳阁 | LuoV</title>
 
 		<!-- CSS -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
@@ -111,8 +111,8 @@
 						</h1>
 							<div class="description wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="2s">
 								<p>
-									贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。<br> Xianliuge and Mr.Luo are working on the new domain name. Click the icon below to access the new address.
-								</p>
+									贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。我们已经在新的域名上工作了：<br> Xianliuge and Mr.Luo are working on the new domain name. <br>Click the icon below to access the new address.We have been working on the new domain for
+								</p>								
 							</div>
 							<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
 								<div class="years-wrapper">
