修复一点问题

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						</h1>
 							<div class="description wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="2s">
 								<p>
-									贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。我们已经在新的域名上工作了：<br> Xianliuge and Mr.Luo are working on the new domain name. <br>Click the icon below to access the new address.We have been working on the new domain for
+									贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。我们已经在新的域名上工作了：<br> XianliuGe and Mr.Luo are working on the new domain name. <br>Click the icon below to access the new address.We have been working on the new domain for
 								</p>								
 							</div>
 							<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
@@ -212,7 +212,7 @@
 				<div class="row">
 					<div class="col-sm-12 footer-copyright">
 						&copy;2018
-						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved。
+						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved.
 					</div>
 				</div>
 			</div>
