--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 									</div>
 									<div class="col-sm-3 features-box wow fadeInDown website">
 										<a href="https://xian6ge.cn">
-											<div class="features-box-icon">
+											<div class="features-box-icon" style="text-align: center;">
 												<!-- <span aria-hidden="true" class="icon_pencil"></span> -->
 												<img src="assets\img\xian6ge.png" width="78px">
 											</div>
-											<h3>贤柳阁</h3>
+											<h3 style="text-align: center;">XianliuGe <br>贤柳阁</h3>
 										</a>
 									</div>
 								</div>
