--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<!-- CNZZ统计代码 -->
 		<script type="text/javascript">
 			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-			document.write(unescape("%3Cspan id='cnzz_stat_icon_1274914062'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274914062' type='text/javascript'%3E%3C/script%3E"));
+			document.write(unescape("%3Cspan style='display:none;'  id='cnzz_stat_icon_1274914062'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274914062' type='text/javascript'%3E%3C/script%3E"));
 		</script>
 		<!-- 百度统计代码 -->
 		<script>
