--- a/404.html
+++ b/404.html
@@ -54,8 +54,8 @@
 				s.parentNode.insertBefore(hm, s);
 			})();
 		</script>
-		<script type="text/javascript" src="assets/js/js.js"></script>
-		<script type="text/javascript" src="assets/js/jump.js"></script>
+		<script type="text/javascript" src="/assets/js/js.js"></script>
+		<script type="text/javascript" src="/assets/js/jump.js"></script>
 	</head>
 
 	<body>
