--- a/404.html
+++ b/404.html
@@ -6,16 +6,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>时光 Site not here -贤柳阁 | LuoV</title>
-
-		<!-- CSS -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
-		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-		<link rel="stylesheet" href="assets/css/animate.css">
-		<link rel="stylesheet" href="assets/css/form-elements.css">
-		<link rel="stylesheet" href="assets/css/style.css">
-		<link rel="stylesheet" href="assets/css/media-queries.css">
+		<title>时光 404 -贤柳阁 | LuoV</title>
 
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -61,176 +52,9 @@
 	<body>
 
 		<!-- Loader -->
-		<div class="loader">
-			<div class="loader-img"></div>
-		</div>
-
-		<!-- Top content -->
-		<div class="top-content">
-
-			<div class="top-content-gradient gradient"></div>
-
-			<!-- Top menu -->
-			<nav class="navbar navbar-inverse navbar-no-bg" role="navigation">
-				<div class="container">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
-						<span class="sr-only">Site move to new address</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-						<a class="navbar-brand" href="index.html">Eternal charm, Endless sound.</a>
-					</div>
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse" id="top-navbar-1">
-						<ul class="nav navbar-nav navbar-right">
-							<li>
-								<span class="li-text">
-								Eternal charm, Endless sound.
-							</span>
-								<!--<a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=USM_IyY0KBE3Pik8MDg9fzI_PA"><strong>Mail Me</strong></a>-->
-								<!--<span class="li-social">
-								<a href="#"><span class="social_facebook"></span></a>
-								<a href="https://github.com/Rorwey"><span class=""></span></a>
-								<a href="https://github.com/Rorwey"><span class="fa-github"></span></a>
-								<a href="#"><span class="social_skype"></span></a>
-							</span>-->
-							</li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-
-			<div class="inner-bg">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-8 text">
-							<h1 class="wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="1s">
-							We moved to the <strong>New Address</strong>
-						</h1>
-							<div class="description wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="2s">
-								<p>
-									贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。我们已经在新的域名上工作了：<br> XianliuGe and Mr.Luo are working on the new domain name. <br>Click the icon below to access the new address.We have been working on the new domain for
-								</p>								
-							</div>
-							<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
-								<div class="years-wrapper">
-									<span class="years"></span> <span class="t-text">years /</span>
-								</div>
-								<!--<div class="mouths-wrapper">
-								<span class="mouths" ></span> <span class="t-text">months /</span>
-							</div>-->
-								<div class="days-wrapper">
-									<span class="days"></span> <span class="t-text">days /</span>
-								</div>
-								<div class="hours-wrapper">
-									<span class="hours"></span> <span class="t-text">hours /</span>
-								</div>
-								<div class="minutes-wrapper">
-									<span class="minutes"></span> <span class="t-text">minutes /</span>
-								</div>
-								<div class="seconds-wrapper">
-									<span class="seconds"></span> <span class="t-text">seconds</span>
-								</div>
-							</div>
-							<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
-								<div class="row">
-									<div class="col-sm-3 features-box wow fadeInUp website">
-										<a href="https://luov.top">
-											<div class="features-box-icon">
-												<!-- <span aria-hidden="true" class="icon_profile"></span> -->
-												<img src="assets\img\mrluo.png" width="80px">
-											</div>
-											<h3>Mr.Luo</h3>
-										</a>
-									</div>
-									<div class="col-sm-3 features-box wow fadeInDown website">
-										<a href="https://xian6ge.cn">
-											<div class="features-box-icon" style="text-align: center;">
-												<!-- <span aria-hidden="true" class="icon_pencil"></span> -->
-												<img src="assets\img\xian6ge.png" width="78px">
-											</div>
-											<h3 style="text-align: center;">XianliuGe <br>贤柳阁</h3>
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-		<!--<div class="copyrights">&copy;<a href="http://luov.top" title="Mr.Luo">LuoV</a></div>-->
-
-		<!-- More info -->
-		<!-- <div class="features-container section-container">
-	        <div class="container">
-	            <div class="row">
-	                <div class="col-sm-12 features section-description wow fadeIn">
-	                    <h2>Some more info</h2>
-	                    <div class="divider-1 wow fadeInUp"><span></span></div>
-	                </div>
-	            </div>
-	            <div class="row">
-                	<div class="col-sm-3 features-box wow fadeInUp">
-	                	<div class="features-box-icon">
-	                		<span aria-hidden="true" class="icon_profile"></span>
-	                	</div>
-	                    <h3>Easy To Use</h3>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
-                    </div>
-                    <div class="col-sm-3 features-box wow fadeInDown">
-	                	<div class="features-box-icon">
-	                		<span aria-hidden="true" class="icon_pencil"></span>
-	                	</div>
-	                    <h3>Responsive Design</h3>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
-                    </div>
-                    <div class="col-sm-3 features-box wow fadeInUp">
-	                	<div class="features-box-icon">
-	                		<span aria-hidden="true" class="icon_cogs"></span>
-	                	</div>
-	                    <h3>Bootstrap Engine</h3>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
-                    </div>
-                    <div class="col-sm-3 features-box wow fadeInDown">
-	                	<div class="features-box-icon">
-	                		<span aria-hidden="true" class="icon_pin"></span>
-	                	</div>
-	                    <h3>We're Here</h3>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
-                    </div>
-	            </div>
-	        </div>
-        </div> -->
-
-		<!-- Footer -->
-		<footer>
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 footer-copyright">
-						&copy;2018
-						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved.
-					</div>
-				</div>
-			</div>
-		</footer>
-
-		<!-- Javascript -->
-		<script src="assets/js/jquery-1.11.1.min.js"></script>
-		<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-		<script src="assets/js/jquery.backstretch.min.js"></script>
-		<!--<script src="assets/js/jquery.countdown.min.js"></script>-->
-		<script src="assets/js/js.js"></script>
-		<script src="assets/js/wow.min.js"></script>
-		<script src="assets/js/retina-1.1.0.min.js"></script>
-		<script src="assets/js/scripts.js"></script>
-
-		<!--[if lt IE 10]>
-            <script src="assets/js/placeholder.js"></script>
-        <![endif]-->
+	
+		<h1>404</h1>
+		<h2>Page not found !</h2>
 
 	</body>
 
