--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 												<!-- <span aria-hidden="true" class="icon_pencil"></span> -->
 												<img src="assets\img\xian6ge.png" width="78px">
 											</div>
-											<h3 style="text-align: center;">XianliuGe <br>贤柳阁</h3>
+											<h4 style="text-align: center; color: white;font-weight: 100;">XianliuGe <br>贤柳阁</h4>
 										</a>
 									</div>
 								</div>
