--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>时光 Site not here -贤柳阁 | LuoV</title>
 		<script type="text/javascript" src="assets/js/js.js"></script>
+		<script type="text/javascript" src="assets/js/calendar.js"></script>
 		<script type="text/javascript" src="assets/js/jump.js"></script>
+
+		<!-- CNZZ统计代码 -->
+		<script type="text/javascript">
+			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+			document.write(unescape("%3Cspan style='display:none;'  id='cnzz_stat_icon_1274914062'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274914062' type='text/javascript'%3E%3C/script%3E"));
+		</script>
+		<!-- 百度统计代码 -->
+		<script>
+			var _hmt = _hmt || [];
+			(function() {
+				var hm = document.createElement("script");
+				hm.src = "https://hm.baidu.com/hm.js?3c99df2096211f5814fd2cfb5d4cb726";
+				var s = document.getElementsByTagName("script")[0];
+				s.parentNode.insertBefore(hm, s);
+			})();
+		</script>
 		<!-- CSS -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -39,22 +56,6 @@
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-
-		<!-- CNZZ统计代码 -->
-		<script type="text/javascript">
-			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-			document.write(unescape("%3Cspan style='display:none;'  id='cnzz_stat_icon_1274914062'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274914062' type='text/javascript'%3E%3C/script%3E"));
-		</script>
-		<!-- 百度统计代码 -->
-		<script>
-			var _hmt = _hmt || [];
-			(function() {
-				var hm = document.createElement("script");
-				hm.src = "https://hm.baidu.com/hm.js?3c99df2096211f5814fd2cfb5d4cb726";
-				var s = document.getElementsByTagName("script")[0];
-				s.parentNode.insertBefore(hm, s);
-			})();
-		</script>
 
 	</head>
 
@@ -87,7 +88,9 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li>
 								<span class="li-text">
-								Eternal charm, Endless sound.
+								<!--Eternal charm, Endless sound.-->
+								<!--2018/11/07 12:12:12<br>
+								戊戌狗年 九月三十 -->
 							</span>
 								<!--<a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=USM_IyY0KBE3Pik8MDg9fzI_PA"><strong>Mail Me</strong></a>-->
 								<!--<span class="li-social">
