--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>时光 Site not here -贤柳阁 | LuoV</title>
 		<script type="text/javascript" src="assets/js/js.js"></script>
-		<script type="text/javascript" src="assets/js/calendar.js"></script>
+		<script type="text/javascript" src="assets/js/calendar.min.js"></script>
 		<script type="text/javascript" src="assets/js/jump.js"></script>
 
 		<!-- CNZZ统计代码 -->
