--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <![endif]-->
 
 		<!-- Favicon and touch icons -->
-		<link rel="shortcut icon" href="assets/ico/favicon.png">
+		<link rel="shortcut icon" href="assets/ico/favicon.ico">
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
@@ -217,7 +217,8 @@
 						&copy;2018
 						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved. &nbsp;&nbsp;<span style="font-size:80%;">赣ICP备<a href="http://www.miitbeian.gov.cn/">18012283</a>号&nbsp;
 		 			<span style="padding-left:25px;background:url(https://s1.ax1x.com/2018/09/29/ilmwIH.png) no-repeat left center" rel="nofollow" >赣公网安备<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36010202000163" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
- 36010202000163</a>号</span></span></span>
+ 36010202000163</a>号</span></span>
+						</span>
 					</div>
 				</div>
 			</div>
