--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			})();
 		</script>
 		<!-- CSS -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
+		<link rel="stylesheet" href="assets/fonts/googleapis-fonts/fonts.css?family=Roboto:400,100,300,500">
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/animate.css">
