--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 	                		<span aria-hidden="true" class="icon_pin"></span>
 	                	</div>
 	                    <h3>时光</h3>
-	                    <p>当前网站。感受时光变换。<br/>Current website. Feel the passing of time.</p>
+	                    <p>当前网站。感受时光变换。<br/>This website. Feel the passing of time.</p>
                     </div>
 	            </div>
 	        </div>
